--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dot_navigation_bar: ^1.0.1+4
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  flutter_riverpod: ^2.3.6
   google_fonts: ^4.0.4
   supabase_flutter: ^1.8.1
-  dot_navigation_bar: ^1.0.1+4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
