--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   google_fonts: ^4.0.4
   supabase_flutter: ^1.8.1
+  phosphor_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
