--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.0.2
   flutter_riverpod: ^2.3.6
+  staggered_grid_view_flutter: ^0.0.4
   google_fonts: ^4.0.4
   http: ^0.13.6
   phosphor_flutter: ^2.0.0
