--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,15 @@ dependencies:
   auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
   dot_navigation_bar: ^1.0.1+4
+  dotted_decoration: ^2.0.0
+  fast_color_picker: ^0.1.1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
-  getwidget: ^3.1.1
-  dotted_decoration: ^2.0.0
-  fast_color_picker: ^0.1.1
   flutter_font_picker: ^1.0.0
   flutter_riverpod: ^2.3.6
+  flutter_secure_storage: ^8.0.0
+  getwidget: ^3.1.1
   google_fonts: ^4.0.4
   group_button: ^5.3.0
   http: ^0.13.6
