--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_font_picker: ^1.0.0
   flutter_riverpod: ^2.3.6
   flutter_secure_storage: ^8.0.0
+  flutter_web_frame: ^0.0.3
   getwidget: ^3.1.1
   google_fonts: ^4.0.4
   group_button: ^5.3.0
