--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,13 @@ dependencies:
   google_fonts: ^4.0.4
   group_button: ^5.3.0
   http: ^0.13.6
+  path_provider: ^2.1.1
   phosphor_flutter: ^2.0.0
+  screenshot: ^1.2.3
+#  social_share: ^2.3.1
   staggered_grid_view_flutter: ^0.0.4
   supabase_flutter: ^1.8.1
+  wolt_modal_sheet: ^0.1.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
